# zero2prod

./: Cargo.toml  Dockerfile  audit.yml
.github/workflows/: general.yml
scripts/: init_db.sh
src/: config.rs  main.rs  startup.rs  telemetry.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_check.rs
